XM1-35348 Fix idea checks